fixed issue with mobile rendering. Removed background color on smaller screen devices

--- a/resume_website/src/styles/Project_Info.css
+++ b/resume_website/src/styles/Project_Info.css
@@ -89,6 +89,7 @@
     .project-info .project-overlay{
         justify-content: flex-start !important;
         align-items: flex-start !important;
+        background-color: transparent;
     }
 
 
